--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -145,10 +145,10 @@
     padding: 0;
     margin: 10px 0;
     width: 48%;
-    border-right: 1px solid #dcdcdc!important;
-    border-bottom: 1px solid #dcdcdc !important;
+    border-right: 2px solid #dcdcdc!important;
+    border-bottom: 2px solid #dcdcdc !important;
     position: relative;
-    border: 1px solid #d5d5d5;
+    border: 1px solid #ececec;
     width: -moz-available;
 
     @media(max-width: 600px){
@@ -307,7 +307,7 @@
       }
     }
   }
-}
+
 
 .page-series {
   .post-title {
