bugs introduced today

--- a/partials/share_links.hbs
+++ b/partials/share_links.hbs
@@ -12,7 +12,7 @@
 		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@blog.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i><span>linkedin</span></a>
 	</li>
 	<!-- Y Combinator -->
-	<li class="btn rss">
+	<li class="btn ycombinator">
 		<a href="javascript:window.location=%22http://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)"><i class="fab fa-y-combinator"></i><span>hackernews</span></a>
 	</li>
 </ul>
