--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -119,7 +119,7 @@
 				}
 			}
 
-			&.rss {
+			&.ycombinator {
 			  background-color: lighten(@rss-color, 15%);
 
 				@media(max-width:600px) {
