bugs introduced today

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -134,7 +134,7 @@
 			}
 
 			.recent-single-post {
-				background: rgba(6, 123, 255, 0.30);
+				background: rgba(6, 123, 255, 0.2);
 				padding: 15px;
 				border-bottom: none;
 				margin-bottom: 10px;
@@ -150,6 +150,8 @@
 			    width: 40px;
 			    border-radius: 0;
 			    margin-right: 15px;
+					border-bottom: 2px solid #002686;
+    			border-right: 2px solid #002686;
 				}
 			}
 
