--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -180,8 +180,8 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: Gordita-Regular;
-      font-size: 1.2em;
+      font-family: Gordita-Medium;
+      font-size: 1em;
     }
 
     .updated {
