--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -1,6 +1,6 @@
 <!-- start about the author -->
 {{#foreach authors include="count.posts"}}
-<div class="about-author clearfix">
+<div class="about-author author-card-large clearfix">
 	{{#if profile_image}}
 		<a href="{{url}}" class="avatar"><img src="{{profile_image}}" alt="Author image"></a>
 		{{else}}
