--- a/src/less/post.less
+++ b/src/less/post.less
@@ -853,4 +853,20 @@
 			}
 		}
 	}
+
+	.author-card-large{
+		@media(max-width: 600px) {
+			display: none;
+		}
+	}
+
+	.author-card-small {
+		display: none;
+
+		@media(max-width: 600px) {
+			display: block;
+			margin: 20px;
+    width: auto!important;
+		}
+	}
 }
