--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -28,6 +28,7 @@
 @import 'table.less';
 @import 'comments.less';
 @import 'signup.less';
+@import 'author-card.less';
 
 /*====================================================
 	about author and comment and next-prev link
