--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -40,10 +40,18 @@
     @media(max-width: 800px) {
       margin: 0 30px 30px;
     }
+
+    .author-card-small {
+      width: 48%;
+    }
   }
 
   figure {
     margin: 0;
+
+    @media(max-width: 600px) {
+      margin-bottom: 20px;
+    }
   }
 
   iframe {
@@ -64,7 +72,7 @@
 
   .about-content {
     & > p {
-      margin: 0 44px 30px!important !important;
+      margin: 0 44px 20px !important;
       font-size: 0.9em;
     }
     @media(max-width: 800px) {
@@ -115,6 +123,7 @@
     position: relative;
     padding: 0;
   }
+}
 
   .page-series {
     .post-title {
@@ -125,13 +134,12 @@
     }
 
     p {
-      font-size: 14px;
+      font-size: .9em;
       color: #505050;
       margin: 0 auto;
       font-weight: 100;
       @media(max-width: 900px) {
         min-height: 63px;
-        font-size: 13px;
       }
     }
 
@@ -285,6 +293,9 @@
       background: white;
       padding: 3px 40px 20px;
       width: auto;
+
+      p {
+        font-size: .9em;
+      }
     }
   }
-}
