--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -57,6 +57,10 @@
     text-overflow: ellipsis;
     width: 100%;
     line-height: 1;
+
+    @media(max-width: 600px){
+          font-size: 12px;
+    }
   }
 
   .link-info {
