--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -11,7 +11,7 @@
 	height: 85px;
 	padding: 0;
   padding-bottom: 20px;
-	border-bottom: 1px solid #efefef;
+	/*border-bottom: 1px solid #efefef;*/
 	@media(max-width: 800px) {
 		display: block;
 		height: fit-content;
@@ -165,7 +165,7 @@
 					}
 
 				@media(max-width: 600px) {
-					font-size: 40px;
+					font-size: 30px;
 					margin: 0!important;
 					opacity: .8;
 				}
