--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -45,6 +45,7 @@
 	padding: 25px;
 	margin-bottom: 20px;
 	min-width: -webkit-fill-available;
+	min-width: -moz-available;
 
 	.post-count {
 		color: @text-color-light;
