--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -22,8 +22,8 @@
       }
 
       .post-excerpt {
-        font-size: .9em;
-        font-family: 'CompassSans-Regular';
+        font-size: 1em;
+        font-family: 'CompassSans-Medium';
       }
 
       .post-title {
