--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -33,7 +33,6 @@
   .meta-info {
     color: @text-color;
   }
-
   @media(max-width: 600px) {
     display: block !important;
   }
@@ -94,7 +93,7 @@
     font-weight: 100;
     float: left!important;
     font-size: 0.8em;
-    margin: 0 auto!important !important;
+    margin: 0 auto !important;
     max-width: 450px;
     padding: 0 25px 30px;
     text-align: center;
@@ -134,6 +133,7 @@
 
     i {
       margin: 0;
+          font-size: 27px;
     }
   }
 
@@ -170,15 +170,18 @@
     }
   }
 
+  .author-cover {
+    width: 100%;
+    height: 110px;
+    background-size: cover !important;
+    background-position-y: center !important;
+    box-shadow: 0 4px 2px -2px rgba(20, 24, 53, 0.15);
+    background: linear-gradient(-15deg, rgba(255, 255, 255, .1) 100px ,transparent 0), linear-gradient(15deg, rgba(255, 255, 255, .1) 100px ,transparent 0),linear-gradient(-15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(0deg, #749BE1 150px, #9267C7);
+  }
+}
 
-
-    .author-cover {
-      width: 100%;
-      height: 110px;
-      background-size: cover !important;
-      background-position-y: center !important;
-      box-shadow: 0 4px 2px -2px rgba(20, 24, 53, 0.15);
-      background: linear-gradient(-15deg, rgba(255, 255, 255, .1) 100px ,transparent 0), linear-gradient(15deg, rgba(255, 255, 255, .1) 100px ,transparent 0),linear-gradient(-15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(0deg, #749BE1 150px, #9267C7);
-    }
-
+.post-template{
+  .post-count{
+    display:none !important;
+  }
 }
