--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -99,7 +99,7 @@
 			a {
 				border: 0;
 		    color: #fff;
-		    background: #067bff;
+		    background: #457fc1;
 				padding: 4px 12px;
 				font-size: .85em;
 		    display: inline-block;
