--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -12,10 +12,10 @@
 				{{#post}}
 					<article class="{{post_class}}">
 
-						{{#if feature_image}}
+						{{!--}}{{#if feature_image}}
 							<div class="featured-media" style="background-image: url({{feature_image}});">
 							</div>
-						{{/if}}
+						{{/if}}--}}
 						<div class="page-head">
 							<h1 class="page-title">{{{title}}}</h1>
 						</div>
