--- a/src/less/post.less
+++ b/src/less/post.less
@@ -617,7 +617,7 @@
 			}
 
 			li {
-				display: inline-block;
+				display: block;
 				font-style: normal;
 				font-variant: normal;
 				text-rendering: auto;
