--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -12,7 +12,7 @@
 				{{#post}}
 					<article class="{{post_class}}">
 
-						{{!--}}{{#if feature_image}}
+						{{!--{{#if feature_image}}
 							<div class="featured-media" style="background-image: url({{feature_image}});">
 							</div>
 						{{/if}}--}}
