--- a/src/less/post.less
+++ b/src/less/post.less
@@ -524,7 +524,7 @@
 		width: 99%;
 		@media(max-width: 600px) {
 			margin: 0 auto 30px;
-			font-size: 14px;
+			font-size: 12px;
 			padding: 0;
 			height: auto;
 			line-height: 4;
@@ -612,7 +612,7 @@
 			padding-left: 0;
 			margin-bottom: 20px;
 			@media(max-width:600px) {
-				margin: 0 20px;
+				margin: 0 15px;
 				padding-left: 0;
 			}
 
@@ -727,7 +727,7 @@
 			width: 99%;
 			border: 1px solid #d8d8d8;
 			@media(max-width: 600px) {
-			    margin-bottom: -5px;
+			    margin-bottom: -5px !important;
 				}
 		}
 		@media(max-width: 600px) {
@@ -744,6 +744,10 @@
 				border: 1px solid #e2e2e2;
 				border-left: 0;
 				border-right: 0;
+
+				@media(max-width: 600px) {
+				    margin-bottom: -5px !important;
+					}
 			}
 		}
 	}
