--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,38 +1,33 @@
 @import "variables.less";
 @import "mixin.less";
-
 /*====================================================
 	footer
 ====================================================*/
 .main-footer {
-	background: url(../images/FOOT10.jpg);
+	background: url("../images/FOOT10.jpg");
 	background-size: cover;
 	/*background: #0089b7;*/
-  padding: 35px 10%;
-  color: #fff;
-  margin-top: 30px;
+	padding: 35px 10%;
+	color: #fff;
+	margin-top: 30px;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 	background-repeat-y: repeat;
-
 	@media(max-width: 1040px) {
-		    background-size: contain;
+		background-size: contain;
 	}
 
-	.footer-container{
+	.footer-container {
 		max-width: 1000px;
 		margin: auto;
 		display: flex;
 		justify-content: space-between;
-
 		@media(max-width: 600px) {
 			flex-direction: column;
 		}
 	}
-
 	@media(max-width: 1000px) {
 		padding: 30px;
 	}
-
 	@media(max-width: 600px) {
 		margin-top: 10px;
 		display: block;
@@ -40,36 +35,33 @@
 	}
 
 	.contributors {
-		.single-author-name{
-				font-size: .9em !important;
-			}
+		.single-author-name {
+			font-size: 0.9em !important;
+		}
 
-			.role {
-				 color: #cae4f3;
-			}
+		.role {
+			color: #cae4f3;
+		}
 	}
 
 	.widget {
 		padding: 10px 0;
-		width:28%;
-		margin:0;
+		width: 28%;
+		margin: 0;
 
 		.about-title {
-			margin:0;
+			margin: 0;
 		}
-
-
-
-		@media(max-width: 800px){
+		@media(max-width: 800px) {
 			padding: 0;
-	    width: 30%;
-	    margin: 10px 10px 60px;
+			width: 30%;
+			margin: 10px 10px 60px;
 		}
+		@media(max-width: 600px) {
+			width: 100%;
+			margin: 10px 0 60px;
 
-		@media(max-width: 600px){
-	    width: 100%;
-
-			&:last-child{
+			&:last-child {
 				margin-bottom: 0;
 			}
 		}
@@ -79,12 +71,11 @@
 			font-weight: 800;
 			margin: 10px 0 25px !important;
 			font-size: 1.5em;
-
-			@media(max-width: 600px){
-				margin: 10px 0 30px!important;
+			@media(max-width: 600px) {
+				margin: 10px 0 30px!important !important;
 				font-size: 1.6em;
-				}
 			}
+		}
 
 		& > div > div:last-child {
 			border-bottom: 0 !important;
@@ -93,23 +84,23 @@
 		.tag-cloud {
 			display: flex;
 			flex-direction: row;
-    	flex-wrap: wrap;
+			flex-wrap: wrap;
 			justify-content: space-between;
 
 			a {
 				border: 0;
-		    color: #fff;
-		    background: #457fc1;
+				color: #fff;
+				background: #457fc1;
 				padding: 4px 12px;
-				font-size: .85em;
-		    display: inline-block;
-		    height: fit-content;
-		    width: fit-content;
-		    margin: 0 8px 8px 0;
+				font-size: 0.85em;
+				display: inline-block;
+				height: fit-content;
+				width: fit-content;
+				margin: 0 8px 8px 0;
 				flex-grow: 1;
-		    text-align: center;
+				text-align: center;
 				font-family: Gordita-Regular;
-				transition: all .3s easeout;
+				transition: all 0.3s easeout;
 				border-bottom: 1px solid black;
 				border-right: 1px solid black;
 
@@ -143,33 +134,30 @@
 			.single-author {
 				display: flex;
 				align-items: center;
-				padding-bottom:10px;
+				padding-bottom: 10px;
 
 				.avi {
 					height: 40px;
-			    width: 40px;
-			    border-radius: 0;
-			    margin-right: 15px;
+					width: 40px;
+					border-radius: 0;
+					margin-right: 15px;
 					border-bottom: 2px solid #002686;
-    			border-right: 2px solid #002686;
+					border-right: 2px solid #002686;
 				}
 			}
 
 			.recent-single-post,
 			.single-author {
-
 				a {
 					margin: 0;
 					text-align: left !important;
 					line-height: 1.3;
 				}
 
-
-
 				.post-title,
 				.single-author-name {
 					color: @white;
-					font-size: .95em;
+					font-size: 0.95em;
 					margin: 0;
 					line-height: 1.4;
 					font-family: Gordita-Regular,sans-serif !important;
@@ -181,16 +169,16 @@
 					}
 				}
 
-			.info {
-				display:flex;
-				flex-direction: column;
+				.info {
+					display: flex;
+					flex-direction: column;
 
 					.role {
 						color: #cae4f3;
-						font-size: .8em;
+						font-size: 0.8em;
 						margin-top: 2px;
-				    font-weight: 200;
-				    font-family: Gordita-Regular,sans-serif;
+						font-weight: 200;
+						font-family: Gordita-Regular,sans-serif;
 					}
 				}
 
@@ -199,8 +187,8 @@
 				}
 
 				.date,
-				.tags{
-					color:#cae4f3;
+				.tags {
+					color: #cae4f3;
 					font-size: 0.9em;
 					margin-top: 9px;
 					font-weight: 200;
@@ -213,10 +201,9 @@
 			}
 		}
 	}
-
-	@media(max-width:600px){
+	@media(max-width:600px) {
 		.widget.recent {
-			display:none;
+			display: none;
 		}
 	}
 }
