--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -6,8 +6,7 @@
   {{/if}}
 
   {{#if feature_image}}
-    <div class="featured-media">
-      <a href="{{url}}"><img src="{{feature_image}}" alt="{{{title}}}"></a>
+      <a href="{{url}}"><div class="featured-media" style="background:url({{feature_image}});" alt="{{{title}}}"></a>
       {{!-- div class="postimage" style="background:url({{feature_image}});" alt="{{{title}}}"></div> --}}
     </div>
   {{/if}}
