--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -4,6 +4,7 @@
 <script src="{{asset "/js/main.min.js"}}"></script>
 {{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 {{#is "author"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/is}}
+{{#is "post"}}<script>themeApp.displayCommentsOnLoad();</script>{{/is}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
 <!-- end scripts -->
