--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -44,10 +44,11 @@
 
 	.featured-media {
 		box-sizing: border-box;
-		max-height: 400px;
+		height: 400px;
 		display: block;
 		overflow: hidden;
 		margin: auto;
+		background-size: cover !important;
 	}
 
 	.postimage {
