--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -44,7 +44,8 @@
 
 	.featured-media {
 		box-sizing: border-box;
-		height: 400px;
+		max-height: 400px;
+		height: 48vw;
 		display: block;
 		overflow: hidden;
 		margin: auto;
