--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -10,7 +10,7 @@
 		<div class="author">
 			<a href="{{url}}">{{name}}</a>
 		</div>
-			{{!--<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</a></span>--}}
+			<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
 			{{#if location}}
 				<span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
 			{{/if}}
@@ -25,12 +25,10 @@
 			{{#if facebook}}
 			<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
 			{{/if}}
+			{{#if bio}}
+			<div class="bio">{{{bio}}}</div>
+				{{/if}}
 		</div>
-		{{#if bio}}
-		<div class="bio">
-			{{{bio}}}
-		</div>
-		{{/if}}
 
 </div>
 {{/foreach}}
