--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -20,7 +20,7 @@
     </div>
     <div class="meta-info">
       <span class="title"></span>
-      <span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</a></span>
+      <span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}</a></span>
       {{#if location}}
         <span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
       {{/if}}
