--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -133,8 +133,9 @@
       overflow: hidden;
 
       @media(max-width:600px) {
-        width: 94%;
-        margin: 0 3% 50px;
+        margin: 0 5% 50px!important;
+        max-width: 90% !important;
+        width: 90% !important;
       }
 
       &.b {
@@ -192,9 +193,9 @@
         margin-bottom: 0;
         /*max-width: 90%;*/
       }
-      @media(max-width: 600px) {
-        min-width: auto;
-        /*max-width: 90%;*/
+      @media(max-width:600px) {
+        margin: 0 5% 50px!important;
+        max-width: 90% !important;
       }
 
       h2 {
