--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -82,6 +82,7 @@
       line-height: 1.2;
       margin-bottom: 15px;
       text-align: left;
+      font-family: CompassSans-Medium,Gordita-Medium,serif;
 
       @media(max-width: 600px) {
         font-size: 1em;
@@ -90,18 +91,21 @@
     }
 
     p {
-      color: @text-color;
+      color: #505050;
       font-weight: 100;
-      line-height: 1.35 !important;
+      line-height: 1.55!important;
       margin-bottom: 10px;
       font-size: 15px;
       text-overflow: ellipsis;
       display: -webkit-box;
-      font-family: 'Gordita-Light' !important;
-      -webkit-line-clamp: 4;
-      -webkit-box-orient: vertical;
+      font-family: Gordita-Regular!important;
+      -webkit-line-clamp: 6;
       overflow: hidden;
       text-align: left;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
       @media(max-width: 600px) {
         display: none;
       }
